<resources>
    <string name="app_name">Minesweeper</string>
    <string name="reset">Reset</string>
    <string name="gameOver">Game Over!</string>
    <string name="win">You Win!</string>
    <string name="play">Play!</string>
    <string name="settings">Settings</string>
    <string name="difficulty">Difficulty:</string>
    <string name="par">Parameters:</string>

    <string name="beg">Beginner</string>
    <string name="easy">Easy</string>
    <string name="med">Medium</string>
    <string name="hard">Hard</string>
</resources>

